# langgraph-memory-agent

./: .gitignore  docker-compose.yml  main.py  prepare_memory.py  pyproject.toml
dependencies/: llm.py
llm/: __init__.py  agent.py  document_preprocessor.py  memory.py  retriever_tool.py
routes/: llm.py
services/: chat.py
