[project]
name = "jotabot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fastapi[all]>=0.116.1",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.72",
    "langchain-google-genai>=2.1.8",
    "langchain-postgres>=0.0.15",
    "langchain-text-splitters>=0.3.9",
    "langchain[openai]>=0.3.27",
    "langgraph>=0.6.2",
    "langgraph-checkpoint-postgres>=2.0.23",
    "langmem>=0.0.29",
    "psycopg2-binary>=2.9.10",
    "psycopg[binary]>=3.2.9",
]

[dependency-groups]
dev = [
    "ruff>=0.12.7",
]
